enhanc: - Fix the responsivness on tablet. - Animate the main img. - Modify the table content.

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -22,6 +22,7 @@
         height: 50px;
         @apply uppercase text-sm;
         padding-left: 8px;
+        text-align: left;
     }
 
     td {
@@ -52,6 +53,8 @@
     border-radius: 60%;
 }
 
+
+
 .boxShadow:hover {
     background: transparent linear-gradient(90deg, #84ADFF 0%, #558AF2 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 0px 22px #84ADFF;
@@ -65,6 +68,34 @@
 @media (max-width: 768px) {
     .stats {
         background: rgb(82, 125, 229);
+    }
+
+    .underlined:after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        height: 13px;
+        width: 100%;
+        border: solid 2px #558AF2;
+        border-color: #558AF2 transparent transparent transparent;
+        border-radius: 60%;
+    }
+
+    .table {
+        th {
+            &:nth-child(2) {
+                padding-left: 14px;
+            }
+        }
+
+        td {
+            &:nth-child(2) {
+                padding-left: 14px;
+            }
+
+            text-align: center;
+        }
     }
 }
 
@@ -107,6 +138,23 @@
 .fadeOut {
     animation: fadeOut 300ms linear;
     opacity: 0;
+}
+
+
+.animateImg {
+    animation: slide 800ms linear;
+}
+
+@keyframes slide {
+    from {
+        opacity: 0;
+        top: -100px;
+    }
+
+    to {
+        opacity: 1;
+        top: 0;
+    }
 }
 
 @keyframes MoveUpDown {
